# SeTesT

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  autogen.sh  config.cmake.in  configure.ac
data/: amino_acid.distribution  amino_acid.matrix  dna.distribution  dna.matrix
examples/: dna_faulty.fasta  dna_nonsignificant.fasta  dna_significant.fasta  general_trait_faulty.tsv  general_trait_nonsignificant.tsv  general_trait_significant.tsv  protein_faulty.fasta  protein_nonsignificant.fasta  protein_significant.fasta
src/: defs.hpp  load_input.hpp  main.cpp  population.hpp  population_impl.hpp  sampling_impl.hpp  substitution_model.hpp  substitution_model_impl.hpp  transmission_pair.hpp  transmission_pair_impl.hpp  types.hpp  types_impl.hpp  utility_functions.hpp
testsuite/: sequence_compile_test.cpp  substitution_model_sequence_space_test.cpp  substitution_model_test.cpp
